# no_drake_in_the_house

./: .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CICD_SETUP.md  CLAUDE.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  DOCKER_BUILD_OPTIMIZATION.md  DOCKER_OPTIMIZATION_SUMMARY.md  KUBERNETES_DEVELOPMENT.md  Makefile  README.md  REGISTRATION_FLOW_SETUP.md  TILT_DEVELOPMENT_GUIDE.md  TILT_ENHANCEMENT_SUMMARY.md  TROUBLESHOOTING.md  TROUBLESHOOTING_GUIDE.md  Tiltfile  Tiltfile.minimal  docker-compose.yml  install-dev-tools.sh  package-lock.json  package.json  pg-shim.d.ts  render.yaml  skaffold.yaml  test-auth-endpoints.sh  test-dnp-endpoints.sh  test-local-auth.sh  tsconfig.json
backend/: .dockerignore  .env  .env.example  .env.test  Cargo.toml  DATABASE_SETUP_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.fast  Dockerfile.runtime  Dockerfile.test  TASK_2_2_IMPLEMENTATION_SUMMARY.md  TASK_3_AUTO_LOGIN_IMPLEMENTATION_SUMMARY.md  TASK_4_3_IMPLEMENTATION_SUMMARY.md  TASK_5_2_IMPLEMENTATION_SUMMARY.md  build.rs  fix_sqlx.sh  fix_sqlx_queries.sh  init.sql  prepare-sqlx.sh  prepare_sqlx.sh  run_migrations.sql
backend/.sqlx/: query-05d592ee7c0203233696df338453e9d39efc23fb46063c2f3432fe68d61b6b01.json  query-104d397cab7d44c05fe306b84ab857e08ac6ed50c2870ac259fe1dbdab987264.json  query-1566d07c425443b4f2b1d581caf03b5e93093ca454d46a25a3d30b9c039af110.json  query-272520c4fe127005c54359a5a87e6b85fd1080523bd86837a28b2797082fc84a.json  query-304c653b2360162c3a4721f88983bd5e64cd54d199a015abe090896468ea2358.json  query-3d5310a97d32c7afb8beed6626ce5188fa075d3a3ae1784956d2a3378b9743ff.json  query-450c3476ca58bcfe807080c8b3619a56b1a8bfc4df61db4000a07afde27381d7.json  query-4a1c0cecaac60d2a379ff3462ea2292d40ecf5561f10aa28a85a6aed8c053022.json  query-558bd42799f6703d07d4bee507959270ecd8ff8384ea1aacc7d9e28e014fe642.json  query-5ec50db30e1f378bf89523d71923d98911ee54db420b42d455e6ac808fe250bf.json  query-614f231a9f318e7b6eb3a0fccfaef95d9365cfd9ef3320004817f996795928d2.json  query-61a706c4f4d1af1382411f95eeee143845783de411ffceeea3490745b2537f6d.json  query-6f29a35285ff0bc96db2c8b44bd610b5498814df9382296f4d593a47918c4cb8.json  query-7328cd0b0d5838f947998c3f60b38095787596a3ecb78a2693feb7a7f799b378.json  query-7699eaa603385fae58daf11ee5a3dec9be2f0ffe290792c7306ef5a29e638cff.json  query-7b29626f65c94e42b851af9fc2bf4a80a727b7ae2383b48c7faf28755304cb0f.json  query-844467dcf996a192d0b027bd8d413b5fc2dfb1381c66c16fc0bf86be4431f795.json  query-8fab26685a445815de4e18aa1d75a69f3456389140746a7765d243b2e15f72c8.json  query-94f2230a4686898524543e6a98f7871a6acd9e0de1f05136ef87e48032dfb1f3.json  query-9babe1630e8b3a2f46fbcd64826a6642308534cc4d62386014123e0c268414fc.json  query-a9db25aa51bbc7fe1a4016acf8927060b9dd72efde619decdcb4f9f20871c13a.json  query-aa162c6cfe3ab4adec82066e6958947fc8fa3bc89c59893546e336055335dd9e.json  query-ae21f0fb1a277f3a1d0f9f970e95b9b52d74a91d2fc255f7655cb069b4ad1f00.json  query-bb407b61154fc7d0f25a645756a365eab913cd5374c9dec1bb709a5f2b983aa7.json  query-c78c18b986371af365ba3276b7062879d0dec97d100fc1cadb2dc0c2be63847b.json  query-c92c43ca48fb10e5db043de8adfdce429a919d057b24f18fd75d1484646ab1a0.json  query-d0149819132b86fddd265ba9aff6e1eeebde17c493cba01208c94907ea342221.json  query-d1ce7fb3fb606be3730ff7370f8797d2eaf9b56e0185e3e11d5a5c1deb0e95c6.json  query-d1f2876dff9c3169c4aa1e6b14514371f89a7d0c8a37ba0706daaee6af76f7d2.json  query-dcc5a516a4779a41afe7e3cfe0fb7244cdafc549363d30c835902535dba0a25c.json  query-e7a621ad52d854029c97d18364dd2138ee6db97a6b6903151ad00d96a1d2a167.json  query-e93022835889252738d6990fe1933c26e577550446a9c5b6d968fcbadf3b88c5.json  query-f42b7327a9717b6631e01f96db14d5e5b530b478589776231e71b89473a08892.json
backend/benches/: integration_benchmarks.rs
backend/migrations/: 002_indexes.sql  003_rate_limiting_and_jobs.sql  004_audit_compliance.sql  007_auth_sessions.sql  009_oauth_accounts.sql  012_seed_artists.sql  013_seed_offenses.sql  014_seed_evidence.sql  017_trouble_scores.sql  018_playcount_revenue.sql  019_tracks_and_credits.sql  022_news_to_offense.sql  024_apple_music_enforcement.sql  024b_add_artists_updated_at.sql  025_seed_drake_showcase.sql  026_user_track_blocks.sql  027_seed_complete_existing.sql  029_seed_artists_batch2_misconduct.sql  033_token_vault_persistence.sql  034_scan_results_json.sql  035_library_sync_index.sql  036_sanitization_plans.sql  037_unify_offense_categories.sql  038_artist_research_quality.sql  039_normalized_playlists.sql  040_playlist_perf_indexes.sql  041_library_search_index.sql  041_offense_query_indexes.sql  042_offense_query_artist_name_index.sql  043_offense_query_user_artist_index.sql  044_audit_log_oauth_trigger_compat.sql  044_operator_probe_lane.sql
backend/scripts/: test_database_setup.sh
backend/src/: backfill_orchestrator.rs  config.rs  database.rs  error.rs  health.rs  lib.rs  main.rs  main_original.rs  metrics.rs  monitoring.rs  recovery.rs  runtime.rs  test_database.rs  validation.rs
backend/tests/: apple_music_enforcement_integration_tests.rs  apple_music_sandbox_tests.rs  audit_log_auth_flow_compat_test.rs  auth_integration_test.rs  auth_middleware_integration_test.rs  auth_oauth_unit_tests.rs  auth_service_integration_test.rs  auth_service_unit_tests.rs  auth_service_unit_tests_fixed.rs  auto_login_unit_tests.rs  basic_integration_test.rs  browser_extension_integration_tests.rs  category_subscription_integration_tests.rs  community_list_tests.rs  contract_tests.rs  core_unit_tests.rs  database_integration_test.rs  dnp_api_integration_test.rs  dnp_list_integration_tests.rs  dnp_list_tests.rs  dnp_list_working_tests.rs  end_to_end_workflow_tests.rs  enforcement_planning_unit_tests.rs  entity_resolution_unit_tests.rs  error_handling_validation_tests.rs  fixed_integration_tests.rs  handler_integration_test.rs  integration_test_runner.rs  integration_tests.rs  job_queue_tests.rs  lib.rs  login_performance_tests.rs  monitoring_integration_tests.rs  oauth_apple_tests.rs  oauth_github_tests.rs  oauth_google_tests.rs  oauth_health_monitoring_tests.rs  oauth_integration_comprehensive_tests.rs  (+28 more)
(+1119 files in other folders)
