[package]
name = "music-streaming-blocklist-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
dashmap = "6.0"
levenshtein = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
regex = "1.0"

# Authentication dependencies
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
oauth2 = "4.4"
totp-lite = "2.0"
base32 = "0.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hmac = "0.12"
sha2 = "0.10"

# Token vault dependencies
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.21"

# Pin problematic dependencies
base64ct = "=1.6.0"

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis dependencies for job queues and rate limiting
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"
async-trait = "0.1"

# CSV processing
csv = "1.3"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"