[package]
name = "music-streaming-blocklist-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
dashmap = "6.0"
levenshtein = "1.0"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
regex = "1.0"

# Web framework dependencies
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Authentication dependencies
jsonwebtoken = "9.0"
bcrypt = "0.15"
oauth2 = "4.4"
totp-lite = "2.0"
base32 = "0.5"
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Cryptography
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"

# Token vault dependencies
aes-gcm = "0.10"


ring = "0.17"
base64 = "0.21"

# Let Cargo resolve dependencies naturally with latest Rust

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "ipnetwork", "rust_decimal"] }

# Decimal handling for currency
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }

# Redis dependencies for job queues and rate limiting
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"
deadpool = "0.10"
async-trait = "0.1"

# CSV processing
csv = "1.3"

# Analytics databases
duckdb = { version = "1.4", features = ["bundled"] }

# Graph database (Kùzu)
kuzu = "0.11"

# Vector database (LanceDB)
lancedb = "0.23"
arrow = { version = "56", default-features = false, features = ["ipc", "json"] }

# RSS/News ingestion
feed-rs = "2.0"
rss = "2.0"

# Web scraping
spider = "2.0"
scraper = "0.20"

# Embeddings
fastembed = "4"

# In-memory caching with TTL
moka = { version = "0.12", features = ["future"] }

# Temp files
tempfile = "3.8"

# Monitoring and observability dependencies
prometheus = "0.13"
metrics = "0.23"
metrics-prometheus = "0.7"
opentelemetry = "0.24"
opentelemetry-prometheus = "0.17"
opentelemetry-otlp = "0.17"
tracing-opentelemetry = "0.25"
sysinfo = "0.30"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
futures = "0.3"
tempfile = "3.8"
criterion = "0.5"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
serial_test = "3.0"
rstest = "0.18"
mockall = "0.12"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
proptest = "1.4"

# Benchmarks disabled for Docker builds
# [[bench]]
# name = "integration_benchmarks"
# harness = false