[workspace]
members = [
    "crates/ndith-core",
    "crates/ndith-db",
    "crates/ndith-analytics",
    "crates/ndith-news",
    "crates/ndith-services",
    ".",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies (shared across most crates)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
regex = "1.0"
async-trait = "0.1"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "uuid", "chrono", "json", "ipnetwork", "rust_decimal"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.14"
deadpool = "0.10"

# Decimal handling
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.15"
oauth2 = "4.4"
totp-lite = "2.0"
base32 = "0.5"
rand = "0.8"

# Cryptography
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.21"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"

# Analytics databases (HEAVY - native deps)
duckdb = { version = "1.4", features = ["bundled"] }

# Vector database (HEAVY - C/C++ deps)
lancedb = "0.23"
arrow = { version = "56", default-features = false, features = ["ipc", "json"] }

# Embeddings (HEAVY)
fastembed = "4"

# News/RSS
feed-rs = "2.0"
rss = "2.0"
scraper = "0.20"

# Misc
dashmap = "6.0"
levenshtein = "1.0"
csv = "1.3"
moka = { version = "0.12", features = ["future"] }
tempfile = "3.8"
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Monitoring
prometheus = "0.13"
metrics = "0.23"
metrics-prometheus = "0.7"
opentelemetry = "0.24"
opentelemetry-prometheus = "0.17"
opentelemetry-otlp = "0.17"
tracing-opentelemetry = "0.25"
sysinfo = "0.30"

# Workspace crates
ndith-core = { path = "crates/ndith-core" }
ndith-db = { path = "crates/ndith-db" }
ndith-analytics = { path = "crates/ndith-analytics", default-features = false }
ndith-news = { path = "crates/ndith-news" }
ndith-services = { path = "crates/ndith-services" }

[package]
name = "music-streaming-blocklist-backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["full-platform", "graph-ladybugdb"]
full-platform = ["dep:ndith-analytics", "dep:ndith-news"]
render-api = []
graph-ladybugdb = ["full-platform", "ndith-analytics/graph-ladybugdb"]

[dependencies]
# Workspace crates
ndith-core = { workspace = true }
ndith-db = { workspace = true }
# The production API currently uses the DuckDB-backed analytics services, but not the
# graph backend. Keep the graph implementation optional so we can swap Kuzu/LadybugDB
# without forcing every backend build to compile a graph engine.
ndith-analytics = { workspace = true, optional = true }
ndith-news = { workspace = true, optional = true }
ndith-services = { workspace = true }

# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Database (needed for handlers with inline sqlx::query! calls)
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
deadpool = { workspace = true }

# Auth (used in middleware)
jsonwebtoken = { workspace = true }

# Used directly in handlers
base64 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }

# Monitoring
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
futures = { workspace = true }
tempfile = { workspace = true }
criterion = "0.5"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }
serial_test = "3.0"
rstest = "0.18"
mockall = "0.12"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
proptest = "1.4"

# Benchmarks disabled for Docker builds
# [[bench]]
# name = "integration_benchmarks"
# harness = false
