[package]
name = "ndith-db"
version = "0.1.0"
edition = "2021"

[dependencies]
ndith-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
deadpool = { workspace = true }
sysinfo = { workspace = true }
