[package]
name = "ndith-services"
version = "0.1.0"
edition = "2021"

[dependencies]
ndith-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }

# Web framework (needed for middleware types)
axum = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
deadpool = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
oauth2 = { workspace = true }
totp-lite = { workspace = true }
base32 = { workspace = true }
rand = { workspace = true }

# Cryptography
hmac = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
md5 = { workspace = true }
aes-gcm = { workspace = true }
ring = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }

# HTTP client
reqwest = { workspace = true }
urlencoding = { workspace = true }

# Misc
dashmap = { workspace = true }
levenshtein = { workspace = true }
csv = { workspace = true }
moka = { workspace = true }
tempfile = { workspace = true }

# Monitoring (needed by circuit breaker metrics and MetricsCollector)
prometheus = { workspace = true }
metrics = { workspace = true }
metrics-prometheus = { workspace = true }
sysinfo = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
